# aiops-agent-isp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/agents/: verifier.md
.cursor/rules/: production-standards.mdc
.cursor/skills/deploy-to-prod/: SKILL.md
app/: __init__.py  api.py  main.py
app/alerting/: __init__.py  notifier.py  rules.py
app/autoconfig/: controller.py  safe_actions.py
app/compliance/: __init__.py  audit.py
app/core/: config.py
app/db/: __init__.py  models.py
app/features/: engineer.py  preprocessor.py
app/ingestion/: __init__.py  genieacs_client.py  ingestor.py  sample_olt_data.json  splynx_client.py
app/logging/: __init__.py  structured_logger.py
app/models/: __init__.py  anomaly_detector.py  decision_tree.py  predictor.py  train_anomaly.py
app/monitoring/: __init__.py  metrics.py  router.py
app/security/: __init__.py  auth.py
tests/: conftest.py  test_alerting.py  test_anomaly_detector.py  test_autoconfig.py  test_db.py  test_features.py  test_health.py  test_ingestion.py  test_main.py  test_monitoring.py  test_predictor_decision_tree.py  test_security_logging_compliance.py
