[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiops-isp-lite"
version = "0.1.0"
description = "AIOPS ISP LITE - FastAPI agent for ISP automation"
requires-python = ">=3.12"

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.25",
  "psycopg2-binary>=2.9.9",
  "scikit-learn>=1.5.0",
  "xgboost>=2.0.0",
  "apscheduler>=3.10.4",
  "httpx>=0.27.0",
  "polars>=1.0.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
line-length = 100

